<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:src="@drawable/settings_tableinf_icon" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_tableinf_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_tableinf_note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_tableinf_name_label"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <EditText
                        android:id="@+id/settings_tableinf_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:textColor="#ffffff" >

                        <requestFocus />
                    </EditText>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="#222222"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/settings_tableinf_btn_store"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_stoge_label" />

                    <Button
                        android:id="@+id/settings_tableinf_btn_cancel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_canel" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>