<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:src="@drawable/settings_resetdata_icon" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_resetdata_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_resetdata_note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_update_current_version"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/settings_resetdata_version"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="Số lượng món ăn"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/settings_resetdata_numdish"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_resetdata_order_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/settings_resetdata_numorder"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_resetdata_orderline_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/settings_resetdata_numorderline"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#222222" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_resetdata_adsitem_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/settings_resetdata_numadsitem"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="#222222"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/settings_resetdata_btn_delete"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_delete" />

                    <Button
                        android:id="@+id/settings_resetdata_btn_cancel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_canel" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>