<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainListActivity" >

    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="100dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="2"
        android:background="@drawable/sce1left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:paddingBottom="10dp"
            android:paddingTop="36dp" >

            <LinearLayout
                android:id="@+id/sce1_left_category_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/turnleftarrow"
                android:clickable="true"
                android:onClick="onClickLeftCategoryArrow"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/sce1_left_category_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Nhóm món ăn"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <LinearLayout
                android:id="@+id/sce1_left_category_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/turnrightarrow"
                android:clickable="true"
                android:onClick="onClickLeftCategoryArrow"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:paddingTop="50dp" >

            <LinearLayout
                android:id="@+id/scr1_left_list_dish_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="false"
                android:onClick="menuOnClick"
                android:text="@string/scr1_left_function"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/scr1_right_dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Tên món ăn"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c20e0e" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sc1rightbgimg"
                android:gravity="center_vertical|center" >

                <ImageView
                    android:id="@+id/scr1_right_dish_img"
                    android:layout_width="436dp"
                    android:layout_height="290dp"
                    android:src="@drawable/cantfoundish" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:tileMode="disabled" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/scr1_price"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/scr1_right_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#c20e0e"
                        android:textSize="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/scr1_numofdiner_title"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/scr1_right_numofdiner_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/sc1_dinner_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#c20e0e" />
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/scr1_right_dish_description_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/scr1_description_title"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>